--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -36,6 +36,13 @@
             <version>1.2.16</version>
         </dependency>
 
+        <!-- Servlet -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
         <!-- RESTful API -->
         <dependency>
             <groupId>com.sun.jersey</groupId>
