Incorporated patch from Jason to 1) make db name & u/p configurable, 2) run 10-second benchmark, and 3) package as JAR via pom

--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -105,6 +105,32 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            
+            <plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.nuodb.storefront.StorefrontApp</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<finalName>StorefrontDriver</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+					
+				</executions>
+			</plugin>
+            
         </plugins>
     </build>
 
