Shifted to public source for NuoDB Hibernate dialect, JDBC driver, etc.

--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -75,9 +75,9 @@
 
         <!-- NuoDB Hibernate dialect -->
         <dependency>
-            <groupId>com.nuodb</groupId>
+            <groupId>com.nuodb.hibernate</groupId>
             <artifactId>nuodb-hibernate</artifactId>
-            <version>1.0</version>
+            <version>1.1.0</version>
         </dependency>
 
         <!-- DAO -->
