--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -120,7 +120,7 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <finalName>StorefrontDriver</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
+                    <appendAssemblyId>true</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
@@ -140,6 +140,11 @@
                 <configuration>
                     <port>8888</port>
                 </configuration>
+            </plugin>
+            
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
             </plugin>
         </plugins>
     </build>
