Reverted appendAssemblyId to false (for now; will be changed back with next release)

--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -120,7 +120,7 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <finalName>StorefrontDriver</finalName>
-                    <appendAssemblyId>true</appendAssemblyId>
+                    <appendAssemblyId>false</appendAssemblyId>  <!-- will be changed to "true" in next release -->
                 </configuration>
                 <executions>
                     <execution>
