--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -81,20 +81,11 @@
             <version>1.1.0</version>
         </dependency>
 
-        <!-- MySQL dependencies:  uncomment to use MySQL instead of NuoDB (and also swap out the hibernate.cfg.xml file) -->
-        <!-- 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-c3p0</artifactId>
-            <version>3.6.6.Final</version>
-        </dependency>
-         -->
-        
+        <!-- MySQL dependencies: uncomment to use MySQL instead of NuoDB (and also swap out the hibernate.cfg.xml file) -->
+        <!-- <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> <version>5.1.9</version> 
+            </dependency> <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-c3p0</artifactId> <version>3.6.6.Final</version> 
+            </dependency> -->
+
         <!-- DAO -->
         <dependency>
             <groupId>com.googlecode.genericdao</groupId>
@@ -148,14 +139,11 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>tomcat-maven-plugin</artifactId>
-                <version>1.1</version>
-                <configuration>
-                    <port>8888</port>
-                </configuration>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.1</version>
             </plugin>
-            
+
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
