Various bug fixes:  carousel labels, warning messages, refresh timings, review validation, Amazon links, welcome link, active node indicator

--- a/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
+++ b/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     </context-param>
 
     <welcome-file-list>
-        <welcome-file>products</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
