DB-6362: Initial work on NuoDB API integration to enhance "NuoDB Nodes" tab of Control Panel

--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -62,7 +62,12 @@
 			<artifactId>jersey-json</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
-
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+        
 		<!-- Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
