--- a/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
+++ b/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
@@ -59,26 +59,58 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet>
-        <servlet-name>storefront-products</servlet-name>
-        <servlet-class>com.nuodb.storefront.servlet.ProductsServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>storefront-product</servlet-name>
-        <servlet-class>com.nuodb.storefront.servlet.ProductServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>storefront-cart</servlet-name>
-        <servlet-class>com.nuodb.storefront.servlet.CartServlet</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>storefront-welcome</servlet-name>
         <servlet-class>com.nuodb.storefront.servlet.WelcomeServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>storefront-control-panel</servlet-name>
-        <servlet-class>com.nuodb.storefront.servlet.ControlPanelServlet</servlet-class>
+        <servlet-name>storefront-store-products</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.store.ProductsServlet</servlet-class>
     </servlet>
-    
+    <servlet>
+        <servlet-name>storefront-store-product</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.store.ProductServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-store-cart</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.store.CartServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-controlpanel-processes</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.controlpanel.ProcessesServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-controlpanel-products</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.controlpanel.ProductsServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-controlpanel-regions</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.controlpanel.RegionsServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-controlpanel-users</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.controlpanel.UsersServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-tour-continuousavailability</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.tour.ContinuousAvailabilityServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-tour-geodistribution</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.tour.GeoDistributionServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-tour-horizscaleout</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.tour.HorizScaleOutServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-tour-multitenancy</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.tour.MultiTenancyServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-tour-noknobsadmin</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.tour.NoKnobsAdminServlet</servlet-class>
+    </servlet>
+        
     <!-- URL mappings -->
     <servlet-mapping>
         <servlet-name>jersey-serlvet</servlet-name>
