DB-8503: Improve Storefront logging

--- a/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
+++ b/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
@@ -75,6 +75,10 @@
         <servlet-class>com.nuodb.storefront.servlet.ControlPanelDatabaseServlet</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>storefront-controlpanel-log</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.ControlPanelLogServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>storefront-controlpanel-processes</servlet-name>
         <servlet-class>com.nuodb.storefront.servlet.ControlPanelProcessesServlet</servlet-class>
     </servlet>
@@ -135,6 +139,10 @@
     <servlet-mapping>
         <servlet-name>storefront-controlpanel-database</servlet-name>
         <url-pattern>/control-panel-database</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>storefront-controlpanel-log</servlet-name>
+        <url-pattern>/control-panel-log</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>storefront-controlpanel-processes</servlet-name>
