--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>3.6.6.Final</version>
+            <version>4.3.8.Final</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -96,14 +96,14 @@
         <dependency>
             <groupId>com.nuodb.hibernate</groupId>
             <artifactId>nuodb-hibernate</artifactId>
-            <version>2.0.3</version>
+            <version>2.1.0-02</version>
         </dependency>
 
         <!-- DAO -->
         <dependency>
             <groupId>com.googlecode.genericdao</groupId>
             <artifactId>dao-hibernate</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>javax.persistence</groupId>
