--- a/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
+++ b/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
@@ -17,8 +17,8 @@
         <param-value>false</param-value> </context-param> -->
 
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>default</welcome-file> <!-- for Storefront app -->
+        <welcome-file>index.jsp</welcome-file> <!-- for admin app -->
     </welcome-file-list>
 
     <!-- Lifecycle listeners -->
@@ -53,6 +53,10 @@
             <param-value>true</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>storefront-default</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.DefaultServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>storefront-welcome</servlet-name>
@@ -91,6 +95,10 @@
         <servlet-class>com.nuodb.storefront.servlet.ControlPanelRegionsServlet</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>storefront-controlpanel-tenants</servlet-name>
+        <servlet-class>com.nuodb.storefront.servlet.ControlPanelTenantsServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>storefront-controlpanel-users</servlet-name>
         <servlet-class>com.nuodb.storefront.servlet.ControlPanelUsersServlet</servlet-class>
     </servlet>
@@ -119,6 +127,10 @@
     <servlet-mapping>
         <servlet-name>jersey-serlvet</servlet-name>
         <url-pattern>/api/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>storefront-default</servlet-name>
+        <url-pattern>/default</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>storefront-welcome</servlet-name>
@@ -155,6 +167,10 @@
     <servlet-mapping>
         <servlet-name>storefront-controlpanel-regions</servlet-name>
         <url-pattern>/control-panel-regions</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>storefront-controlpanel-tenants</servlet-name>
+        <url-pattern>/control-panel-tenants</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>storefront-controlpanel-users</servlet-name>
