--- a/StorefrontDemo/pom.xml
+++ b/StorefrontDemo/pom.xml
@@ -22,6 +22,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jersey.version>1.12</jersey.version>
+	<nuodb.jdbc.groupId>com.nuodb.jdbc</nuodb.jdbc.groupId>
+	<nuodb.jdbc.artifactId>nuodb-jdbc</nuodb.jdbc.artifactId>
+	<nuodb.jdbc.version>2.3</nuodb.jdbc.version>
+	<nuodb.hibernate.groupId>com.nuodb.hibernate</nuodb.hibernate.groupId>
+	<nuodb.hibernate.artifactId>nuodb-hibernate</nuodb.hibernate.artifactId>
+	<nuodb.hibernate.version>2.3</nuodb.hibernate.version>
     </properties>
 
     <dependencies>
@@ -94,14 +100,14 @@
 
         <!-- NuoDB JDBC + Hibernate dialect -->
         <dependency>
-            <groupId>com.nuodb.jdbc</groupId>
-            <artifactId>nuodb-jdbc</artifactId>
-            <version>2.3</version>
+            <groupId>${nuodb.jdbc.groupId}</groupId>
+            <artifactId>${nuodb.jdbc.artifactId}</artifactId>
+            <version>${nuodb.jdbc.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.nuodb.hibernate</groupId>
-            <artifactId>nuodb-hibernate</artifactId>
-            <version>2.3</version>
+            <groupId>${nuodb.hibernate.groupId}</groupId>
+            <artifactId>${nuodb.hibernate.artifactId}</artifactId>
+            <version>${nuodb.hibernate.version}</version>
         </dependency>
         
         <!-- DAO -->
