Update 'geo-distribution' to 'region distribution'

--- a/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
+++ b/StorefrontDemo/src/main/webapp/WEB-INF/web.xml
@@ -173,7 +173,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>storefront-tour-geodistribution</servlet-name>
-        <url-pattern>/tour-geo-distribution</url-pattern>
+        <url-pattern>/tour-region-distribution</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>storefront-tour-scaleout</servlet-name>
