--- a/OpenShift/nuodb.3.1.0-openshift-persistent-3ADMIN-1SM-template.yaml
+++ b/OpenShift/nuodb.3.1.0-openshift-persistent-3ADMIN-1SM-template.yaml
@@ -66,21 +66,54 @@ objects:
       - ReadWriteOnce
     resources:
       requests:
-        storage: 5G
+        storage: ${SM_PVC_SIZE}
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    name: ${ADMIN_PVC_1}
+  spec:
+    storageClassName: openebs-percona
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: ${ADMIN_PVC_SIZE}
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    name: ${ADMIN_PVC_2}
+  spec:
+    storageClassName: openebs-percona
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: ${ADMIN_PVC_SIZE}
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    name: ${ADMIN_PVC_3}
+  spec:
+    storageClassName: openebs-percona
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: ${ADMIN_PVC_SIZE}
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
     annotations:
-      description: "Broker pod instance deployment configuration"
+      description: "Admin pod instance deployment configuration"
       template.alpha.openshift.io/wait-for-ready: "true"
     labels:
       app: admin
-    name: admin
+    name: admin1
   spec:
     replicas: 1
     selector:
       app: admin
-      deploymentconfig: admin
+      deploymentconfig: admin1
     strategy:
       activeDeadlineSeconds: 21600
       resources: {}
@@ -97,11 +130,12 @@ objects:
           openshift.io/generated-by: OpenShiftNewApp
         labels:
           app: admin
-          deploymentconfig: admin
+          deploymentconfig: admin1
       spec:
+        hostname: nuoadmin1
         containers:
         - env:
-          - name: AGENT_PORT
+          - name: API_PORT
             value: "8888"
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}
@@ -124,8 +158,19 @@ objects:
             value: local
           - name: NODE_TYPE
             value: NUOADMIN
+          - name: ADMIN_TYPE
+            value: LEADER
           image: ${CONTAINER}
           imagePullPolicy: IfNotPresent
+          readinessProbe:
+            initialDelaySeconds: 10
+            periodSeconds: 2
+            failureThreshold: 30
+            successThreshold: 4
+            timeoutSeconds: 1
+            httpGet:
+              path: /api/1/peers
+              port: 8888
           name: admin
           ports:
           - containerPort: 8888
@@ -138,16 +183,207 @@ objects:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-          - mountPath: /archive
-            name: admin-volume-1
+          - mountPath: /opt/nuodb/var/opt
+            name: ${ADMIN_PVC_1}
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
-        terminationGracePeriodSeconds: 30
+        terminationGracePeriodSeconds: 15
         volumes:
-        - emptyDir: {}
-          name: admin-volume-1
+        - name: ${ADMIN_PVC_1}
+          persistentVolumeClaim:
+            claimName: ${ADMIN_PVC_1}
+    test: false
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
+    annotations:
+      description: "Admin pod instance deployment configuration"
+      template.alpha.openshift.io/wait-for-ready: "true"
+    labels:
+      app: admin
+    name: admin2
+  spec:
+    replicas: 1
+    selector:
+      app: admin
+      deploymentconfig: admin2
+    strategy:
+      activeDeadlineSeconds: 21600
+      resources: {}
+      rollingParams:
+        intervalSeconds: 1
+        maxSurge: 25%
+        maxUnavailable: 25%
+        timeoutSeconds: 600
+        updatePeriodSeconds: 1
+      type: Rolling
+    template:
+      metadata:
+        annotations:
+          openshift.io/generated-by: OpenShiftNewApp
+        labels:
+          app: admin
+          deploymentconfig: admin2
+      spec:
+        hostname: nuoadmin2
+        containers:
+        - env:
+          - name: API_PORT
+            value: "8888"
+          - name: PEER_ADDRESS
+            value: ${ADMIN_SVC_NAME}
+          - name: DB_NAME
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-name
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-username
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-password
+          - name: NODE_REGION
+            value: local
+          - name: NODE_TYPE
+            value: NUOADMIN
+          - name: ADMIN_TYPE
+            value: FOLLOWER
+          image: ${CONTAINER}
+          imagePullPolicy: IfNotPresent
+          readinessProbe:
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 30
+            successThreshold: 2
+            timeoutSeconds: 1
+            httpGet:
+              path: /api/1/peers
+              port: 8888
+          name: admin2
+          ports:
+          - containerPort: 8888
+            protocol: TCP
+          - containerPort: 48004
+            protocol: TCP
+          - containerPort: 48005
+            protocol: TCP
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          volumeMounts:
+          - mountPath: /opt/nuodb/var/opt
+            name: ${ADMIN_PVC_2}
+        dnsPolicy: ClusterFirst
+        restartPolicy: Always
+        schedulerName: default-scheduler
+        securityContext: {}
+        terminationGracePeriodSeconds: 15
+        volumes:
+        - name: ${ADMIN_PVC_2}
+          persistentVolumeClaim:
+            claimName: ${ADMIN_PVC_2}
+    test: false
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
+    annotations:
+      description: "Admin pod instance deployment configuration"
+      template.alpha.openshift.io/wait-for-ready: "true"
+    labels:
+      app: admin
+    name: admin3
+  spec:
+    replicas: 1
+    selector:
+      app: admin
+      deploymentconfig: admin3
+    strategy:
+      activeDeadlineSeconds: 21600
+      resources: {}
+      rollingParams:
+        intervalSeconds: 1
+        maxSurge: 25%
+        maxUnavailable: 25%
+        timeoutSeconds: 600
+        updatePeriodSeconds: 1
+      type: Rolling
+    template:
+      metadata:
+        annotations:
+          openshift.io/generated-by: OpenShiftNewApp
+        labels:
+          app: admin
+          deploymentconfig: admin3
+      spec:
+        hostname: nuoadmin3
+        containers:
+        - env:
+          - name: API_PORT
+            value: "8888"
+          - name: PEER_ADDRESS
+            value: ${ADMIN_SVC_NAME}
+          - name: DB_NAME
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-name
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-username
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-password
+          - name: NODE_REGION
+            value: local
+          - name: NODE_TYPE
+            value: NUOADMIN
+          - name: ADMIN_TYPE
+            value: FOLLOWER
+          image: ${CONTAINER}
+          imagePullPolicy: IfNotPresent
+          readinessProbe:
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 30
+            successThreshold: 2
+            timeoutSeconds: 1
+            httpGet:
+              path: /api/1/peers
+              port: 8888
+          name: admin3
+          ports:
+          - containerPort: 8888
+            protocol: TCP
+          - containerPort: 48004
+            protocol: TCP
+          - containerPort: 48005
+            protocol: TCP
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          volumeMounts:
+          - mountPath: /opt/nuodb/var/opt
+            name: ${ADMIN_PVC_3}
+        dnsPolicy: ClusterFirst
+        restartPolicy: Always
+        schedulerName: default-scheduler
+        securityContext: {}
+        terminationGracePeriodSeconds: 15
+        volumes:
+        - name: ${ADMIN_PVC_3}
+          persistentVolumeClaim:
+            claimName: ${ADMIN_PVC_3}
     test: false
 - apiVersion: v1
   kind: DeploymentConfig
@@ -183,7 +419,7 @@ objects:
       spec:
         containers:
         - env:
-          - name: AGENT_PORT
+          - name: API_PORT
             value: "8888"
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}
@@ -238,7 +474,7 @@ objects:
       app: te
     name: te
   spec:
-    replicas: 1
+    replicas: ${TE_COUNT}
     selector:
       app: te
       deploymentconfig: te
@@ -262,7 +498,7 @@ objects:
       spec:
         containers:
         - env:
-          - name: AGENT_PORT
+          - name: API_PORT
             value: "8888"
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}
@@ -336,8 +572,38 @@ parameters:
     description: "Name of the volume to create and use for persistent storage"
     required: true
     value: nuodb-storage-pvc-1
+  - name: SM_PVC_SIZE
+    diplayName: SM Volume Size (GB)
+    description: "PVC Size for Storage Manager in GB"
+    required: true
+    value: 20G
+  - name: ADMIN_PVC_1
+    displayName: Admin Raft log Persistent Volume Claim Admin 1
+    description: "Name of the volume to create and use for persistent storage for Admin 1"
+    required: true
+    value: nuodb-admin-pvc-1
+  - name: ADMIN_PVC_2
+    displayName: Admin Raft log Persistent Volume Claim Admin 2
+    description: "Name of the volume to create and use for persistent storage Admin 2"
+    required: true
+    value: nuodb-admin-pvc-2
+  - name: ADMIN_PVC_3
+    displayName: Admin Raft log Persistent Volume Claim Admin 3
+    description: "Name of the volume to create and use for persistent storage Admin 3"
+    required: true
+    value: nuodb-admin-pvc-3
+  - name: ADMIN_PVC_SIZE
+    diplayName: Admin Raft Log Volume Size (GB)
+    description: "PVC Size for Admin in GB"
+    required: true
+    value: 5G
+  - name: TE_COUNT
+    displayName: Number of Transaction Engines to Launch
+    description: "Start NuoDB with a specific number of TEs"
+    required: true
+    value: "2"
   - name: CONTAINER
     displayName: Container Registry
     description: "Registry to pull NuoDB from."
     required: true
-    value: "docker.io/nuodb/nuodb-ee:3.1.0-53.2"
+    value: "docker.io/nuodb/nuodb-ee:3.1.0-53.10"
