--- a/OpenShift/nuodb.3.1.0-openshift-persistent-3ADMIN-2SM-template.yaml
+++ b/OpenShift/nuodb.3.1.0-openshift-persistent-3ADMIN-2SM-template.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Template
 metadata:
   creationTimestamp: null
-  name: nuodb.3.1.0-ce-ephemeral
+  name: nuodb.3.1.0-ee-persistent-3admin-2sm
   labels:
-    template: nuodb.3.1.0-ce-ephemeral
+    template: nuodb.3.1.0-ee-persistent-3admin-2sm
   annotations:
-    openshift.io/display-name: "NouDB CE (Ephemeral)"
-    description: "NuoDB database service, without persistent storage. For more information about using this template, including OpenShift considerations, see https://hub.docker.com/r/nuodb/nuodb-ce/ \n\nWARNING: Any data stored will be lost upon pod destruction. Only use this template for testing"
-    iconClass: icon-mysql-database
+    openshift.io/display-name: "NouDB CE (Persistent)"
+    description: "NuoDB database service, with persistent storage. For more information about using this template, including OpenShift considerations, see https://hub.docker.com/r/nuodb/nuodb-ce/ \n\nWARNING: Any data stored will be lost upon pod destruction. Only use this template for testing"
+    iconClass: https://www.nuodb.com/sites/all/themes/nuodb/logo.svg
     tags: "database,nuodb"
     openshift.io/long-description: "This template provides a Clustered NuoDB server with a database created.  The database is not stored on persistent storage, so any restart of the service will result in all data being lost.  The database name, username, and password are chosen via parameters when provisioning this service."
     openshift.io/provider-display-name: "NuoDB, Inc."
@@ -39,7 +39,7 @@ objects:
   spec:
     ports:
     - name: 8888-tcp
-      port: 8888
+      port: "8888"
       protocol: TCP
       targetPort: 8888
     - name: 48004-tcp
@@ -66,7 +66,7 @@ objects:
       - ReadWriteOnce
     resources:
       requests:
-        storage: 5G
+        storage: ${SM_PVC_SIZE}
 - apiVersion: v1
   kind: PersistentVolumeClaim
   metadata:
@@ -77,21 +77,54 @@ objects:
       - ReadWriteOnce
     resources:
       requests:
-        storage: 5G
+        storage: ${SM_PVC_SIZE}
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    name: ${ADMIN_PVC_1}
+  spec:
+    storageClassName: openebs-percona
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: ${ADMIN_PVC_SIZE}
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    name: ${ADMIN_PVC_2}
+  spec:
+    storageClassName: openebs-percona
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: ${ADMIN_PVC_SIZE}
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata:
+    name: ${ADMIN_PVC_3}
+  spec:
+    storageClassName: openebs-percona
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: ${ADMIN_PVC_SIZE}
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
     annotations:
-      description: "Broker pod instance deployment configuration"
+      description: "Admin pod instance deployment configuration"
       template.alpha.openshift.io/wait-for-ready: "true"
     labels:
       app: admin
-    name: admin
+    name: admin1
   spec:
     replicas: 1
     selector:
       app: admin
-      deploymentconfig: admin
+      deploymentconfig: admin1
     strategy:
       activeDeadlineSeconds: 21600
       resources: {}
@@ -108,11 +141,12 @@ objects:
           openshift.io/generated-by: OpenShiftNewApp
         labels:
           app: admin
-          deploymentconfig: admin
+          deploymentconfig: admin1
       spec:
+        hostname: nuoadmin1
         containers:
         - env:
-          - name: AGENT_PORT
+          - name: API_PORT
             value: "8888"
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}
@@ -135,8 +169,19 @@ objects:
             value: local
           - name: NODE_TYPE
             value: NUOADMIN
+          - name: ADMIN_TYPE
+            value: LEADER
           image: ${CONTAINER}
           imagePullPolicy: IfNotPresent
+          readinessProbe:
+            initialDelaySeconds: 10
+            periodSeconds: 2
+            failureThreshold: 30
+            successThreshold: 4
+            timeoutSeconds: 1
+            httpGet:
+              path: /api/1/peers
+              port: 8888
           name: admin
           ports:
           - containerPort: 8888
@@ -149,16 +194,207 @@ objects:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-          - mountPath: /archive
-            name: admin-volume-1
+          - mountPath: /opt/nuodb/var/opt
+            name: ${ADMIN_PVC_1}
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
-        terminationGracePeriodSeconds: 30
+        terminationGracePeriodSeconds: 15
         volumes:
-        - emptyDir: {}
-          name: admin-volume-1
+        - name: ${ADMIN_PVC_1}
+          persistentVolumeClaim:
+            claimName: ${ADMIN_PVC_1}
+    test: false
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
+    annotations:
+      description: "Admin pod instance deployment configuration"
+      template.alpha.openshift.io/wait-for-ready: "true"
+    labels:
+      app: admin
+    name: admin2
+  spec:
+    replicas: 1
+    selector:
+      app: admin
+      deploymentconfig: admin2
+    strategy:
+      activeDeadlineSeconds: 21600
+      resources: {}
+      rollingParams:
+        intervalSeconds: 1
+        maxSurge: 25%
+        maxUnavailable: 25%
+        timeoutSeconds: 600
+        updatePeriodSeconds: 1
+      type: Rolling
+    template:
+      metadata:
+        annotations:
+          openshift.io/generated-by: OpenShiftNewApp
+        labels:
+          app: admin
+          deploymentconfig: admin2
+      spec:
+        hostname: nuoadmin2
+        containers:
+        - env:
+          - name: API_PORT
+            value: "8888"
+          - name: PEER_ADDRESS
+            value: ${ADMIN_SVC_NAME}
+          - name: DB_NAME
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-name
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-username
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-password
+          - name: NODE_REGION
+            value: local
+          - name: NODE_TYPE
+            value: NUOADMIN
+          - name: ADMIN_TYPE
+            value: FOLLOWER
+          image: ${CONTAINER}
+          imagePullPolicy: IfNotPresent
+          readinessProbe:
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 30
+            successThreshold: 2
+            timeoutSeconds: 1
+            httpGet:
+              path: /api/1/peers
+              port: 8888
+          name: admin2
+          ports:
+          - containerPort: 8888
+            protocol: TCP
+          - containerPort: 48004
+            protocol: TCP
+          - containerPort: 48005
+            protocol: TCP
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          volumeMounts:
+          - mountPath: /opt/nuodb/var/opt
+            name: ${ADMIN_PVC_2}
+        dnsPolicy: ClusterFirst
+        restartPolicy: Always
+        schedulerName: default-scheduler
+        securityContext: {}
+        terminationGracePeriodSeconds: 15
+        volumes:
+        - name: ${ADMIN_PVC_2}
+          persistentVolumeClaim:
+            claimName: ${ADMIN_PVC_2}
+    test: false
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
+    annotations:
+      description: "Admin pod instance deployment configuration"
+      template.alpha.openshift.io/wait-for-ready: "true"
+    labels:
+      app: admin
+    name: admin3
+  spec:
+    replicas: 1
+    selector:
+      app: admin
+      deploymentconfig: admin3
+    strategy:
+      activeDeadlineSeconds: 21600
+      resources: {}
+      rollingParams:
+        intervalSeconds: 1
+        maxSurge: 25%
+        maxUnavailable: 25%
+        timeoutSeconds: 600
+        updatePeriodSeconds: 1
+      type: Rolling
+    template:
+      metadata:
+        annotations:
+          openshift.io/generated-by: OpenShiftNewApp
+        labels:
+          app: admin
+          deploymentconfig: admin3
+      spec:
+        hostname: nuoadmin3
+        containers:
+        - env:
+          - name: API_PORT
+            value: "8888"
+          - name: PEER_ADDRESS
+            value: ${ADMIN_SVC_NAME}
+          - name: DB_NAME
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-name
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-username
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: nuodb
+                key: database-password
+          - name: NODE_REGION
+            value: local
+          - name: NODE_TYPE
+            value: NUOADMIN
+          - name: ADMIN_TYPE
+            value: FOLLOWER
+          image: ${CONTAINER}
+          imagePullPolicy: IfNotPresent
+          readinessProbe:
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 30
+            successThreshold: 2
+            timeoutSeconds: 1
+            httpGet:
+              path: /api/1/peers
+              port: 8888
+          name: admin3
+          ports:
+          - containerPort: 8888
+            protocol: TCP
+          - containerPort: 48004
+            protocol: TCP
+          - containerPort: 48005
+            protocol: TCP
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          volumeMounts:
+          - mountPath: /opt/nuodb/var/opt
+            name: ${ADMIN_PVC_3}
+        dnsPolicy: ClusterFirst
+        restartPolicy: Always
+        schedulerName: default-scheduler
+        securityContext: {}
+        terminationGracePeriodSeconds: 15
+        volumes:
+        - name: ${ADMIN_PVC_3}
+          persistentVolumeClaim:
+            claimName: ${ADMIN_PVC_3}
     test: false
 - apiVersion: v1
   kind: DeploymentConfig
@@ -167,14 +403,14 @@ objects:
       description: "Storage Manager(SM) pod instance deployment configuration"
       template.alpha.openshift.io/wait-for-ready: "true"
     labels:
-      app: sm1
+      app: sm
     name: sm1
   spec:
     replicas: 1
     minReplicas: 1
     maxReplicas: 1
     selector:
-      app: sm1
+      app: sm
       deploymentconfig: sm1
     strategy:
       activeDeadlineSeconds: 21600
@@ -191,12 +427,12 @@ objects:
         annotations:
           openshift.io/generated-by: OpenShiftNewApp
         labels:
-          app: sm1
+          app: sm
           deploymentconfig: sm1
       spec:
         containers:
         - env:
-          - name: AGENT_PORT
+          - name: API_PORT
             value: "8888"
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}
@@ -219,6 +455,8 @@ objects:
             value: local
           - name: NODE_TYPE
             value: SM
+          - name: SM_TYPE
+            value: FIRST
           image: ${CONTAINER}
           imagePullPolicy: IfNotPresent
           name: sm1
@@ -235,7 +473,7 @@ objects:
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
-        terminationGracePeriodSeconds: 30
+        terminationGracePeriodSeconds: 15
         volumes:
         - name: ${SM_PVC_1}
           persistentVolumeClaim:
@@ -248,14 +486,14 @@ objects:
       description: "Storage Manager(SM) pod instance deployment configuration"
       template.alpha.openshift.io/wait-for-ready: "true"
     labels:
-      app: sm2
+      app: sm
     name: sm2
   spec:
     replicas: 1
     minReplicas: 1
     maxReplicas: 1
     selector:
-      app: sm2
+      app: sm
       deploymentconfig: sm2
     strategy:
       activeDeadlineSeconds: 21600
@@ -272,12 +510,12 @@ objects:
         annotations:
           openshift.io/generated-by: OpenShiftNewApp
         labels:
-          app: sm2
+          app: sm
           deploymentconfig: sm2
       spec:
         containers:
         - env:
-          - name: AGENT_PORT
+          - name: API_PORT
             value: "8888"
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}
@@ -300,6 +538,8 @@ objects:
             value: local
           - name: NODE_TYPE
             value: SM
+          - name: SM_TYPE
+            value: SECOND
           image: ${CONTAINER}
           imagePullPolicy: IfNotPresent
           name: sm2
@@ -316,7 +556,7 @@ objects:
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
-        terminationGracePeriodSeconds: 30
+        terminationGracePeriodSeconds: 15
         volumes:
         - name: ${SM_PVC_2}
           persistentVolumeClaim:
@@ -332,7 +572,7 @@ objects:
       app: te
     name: te
   spec:
-    replicas: 1
+    replicas: ${TE_COUNT}
     selector:
       app: te
       deploymentconfig: te
@@ -356,7 +596,7 @@ objects:
       spec:
         containers:
         - env:
-          - name: AGENT_PORT
+          - name: API_PORT
             value: "8888"
           - name: PEER_ADDRESS
             value: ${ADMIN_SVC_NAME}
@@ -395,7 +635,7 @@ objects:
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
-        terminationGracePeriodSeconds: 30
+        terminationGracePeriodSeconds: 15
         volumes:
         - emptyDir: {}
           name: admin-volume-1
@@ -403,7 +643,7 @@ objects:
 parameters:
   - name: NAMESPACE
     displayName: Namespace
-    description: "The OpenShift Namespace where the ImageStream resides."
+    description: "The OpenShift Namespace where the ImageStream resides"
     value: openshift
   - name: DB_NAME
     displayName: Database Name
@@ -412,17 +652,17 @@ parameters:
     value:
   - name: DB_USER
     displayName: Database Username
-    description: "NuoDB connection username."
+    description: "NuoDB connection username"
     required: true
     value:
   - name: DB_PASSWORD
     displayName: Database User Password
-    description: "Database user password."
+    description: "Database user password"
     required: true
     value:
   - name: ADMIN_SVC_NAME
     displayName: NuoDB Admin Service Name
-    description: "Service Name to Connect to NuoAdmin."
+    description: "Service Name to Connect to NuoAdmin"
     required: true
     value: nuodb-admin-service
   - name: SM_PVC_1
@@ -435,8 +675,38 @@ parameters:
     description: "Name of the volume to create and use for persistent storage SM 2"
     required: true
     value: nuodb-storage-pvc-2
+  - name: SM_PVC_SIZE
+    diplayName: SM Volume Size (GB)
+    description: "PVC Size for Storage Manager in GB"
+    required: true
+    value: 20G
+  - name: ADMIN_PVC_1
+    displayName: Admin Raft log Persistent Volume Claim Admin 1
+    description: "Name of the volume to create and use for persistent storage for Admin 1"
+    required: true
+    value: nuodb-admin-pvc-1
+  - name: ADMIN_PVC_2
+    displayName: Admin Raft log Persistent Volume Claim Admin 2
+    description: "Name of the volume to create and use for persistent storage Admin 2"
+    required: true
+    value: nuodb-admin-pvc-2
+  - name: ADMIN_PVC_3
+    displayName: Admin Raft log Persistent Volume Claim Admin 3
+    description: "Name of the volume to create and use for persistent storage Admin 3"
+    required: true
+    value: nuodb-admin-pvc-3
+  - name: ADMIN_PVC_SIZE
+    diplayName: Admin Raft Log Volume Size (GB)
+    description: "PVC Size for Admin in GB"
+    required: true
+    value: 5G
+  - name: TE_COUNT
+    displayName: Number of Transaction Engines to Launch
+    description: "Start NuoDB with a specific number of TEs"
+    required: true
+    value: "2"
   - name: CONTAINER
     displayName: Container Registry
-    description: "Registry to pull NuoDB from."
+    description: "Registry to pull NuoDB from"
     required: true
-    value: "docker.io/nuodb/nuodb-ee:3.1.0-53.2"
+    value: "docker.io/nuodb/nuodb-ee:3.1.0-53.10"
